# balanced-ternary

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  charter.md  logo-prompt.md
examples/: basic_usage.py
src/balanced_ternary/: __init__.py  _core.py
tests/: test_balanced_ternary.py
